force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <label>Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>