force-app/main/default/objects/Allocation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Gold Coast – Tweed Heads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>