force-app/main/default/objects/Allocation__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Allocation</relationshipLabel>
    <relationshipName>Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>